Wed Sep 22 09:03:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/cancel.c src/dblib/unittests/done_handling.c:
	* src/odbc/unittests/array_out.c:
	- fix some portability issues with Solaris/SPARC (thanks to Peter
	  C. Norton)

Thu Sep 16 16:32:02 EDT 2010	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt src/apps/bsqldb.c
	- add -H hostname to override hostname sent to server

Thu Sep 16 14:30:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c:
	- update inline documentation for dbiscount (patch from LacaK)

Thu Sep 16 13:11:46 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h: init mutex fixes

Thu Sep 16 13:09:29 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/Makefile.am win32/dblib.def win32/msvc6/FreeTDS.dsw:
	* win32/msvc6/Makefile.am win32/msvc6/dblib_dll.dsp:
	- add project and definition file for dblib dll (patch from LacaK)

Thu Sep 16 09:44:12 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml:
	- add documentation for "enable gssapi delegation" option

Thu Sep 16 09:36:57 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/gssapi.c:
	- add delegate option for Kerberos (patch from Peter C. Norton)

Wed Sep 15 11:27:16 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO: small note

Tue Sep 14 23:49:49 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0007.sql
	- add VARYBINBIND and BINARYBIND testing (seem broken)

Tue Sep 14 10:39:31 EDT 2010	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt marked dbiscount OK

Mon Sep 13 22:09:46 EDT 2010	JK Lowden <jklowden@freetds.org>
	* configure.ac use printf, not echo -n
	* include/sybdb.h src/dblib/dblib.c mark dbpoll as unimplemented 

Mon Sep 13 20:53:12 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c fix error-handler recursion